@@ -5,13 +5,12 @@ import java.net.URL;
 import java.util.List;
 import java.util.concurrent.ForkJoinPool;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 /**
  * This example shows how to combine Java parallel streams with and
  * without the ForkJoinPool.ManagedBlocker interface and the Java
- * fork-join framework to download multiple images from a remote
- * server.
+ * common fork-join pool to download and store multiple images from a
+ * remote server.
  */
 public class ex20 {
     /**
@@ -42,20 +41,20 @@ public class ex20 {
         // Warm up the common fork-join pool.
         warmUpThreadPool();
 
-        // Runs the tests using the using the Java fork-join
+        // Runs the tests using the Java fork-join
         // framework's default behavior, which does not add new worker
         // threads to the pool when blocking occurs.
         runTest(this::downloadAndStoreImage,
                 "testDefaultDownloadBehavior()");
 
-        // Run the tests using the using the BlockingTask wrapper
+        // Run the tests using the BlockingTask wrapper
         // around the Java fork-join framework's ManagedBlocker
         // mechanism, which adds new worker threads to the pool
         // adaptively when blocking occurs.
         runTest(this::downloadAndStoreImageMB,
                 "testAdaptiveMBDownloadBehavior()");
 
-        // Run the tests using the using the BlockingTask wrapper for
+        // Run the tests using the BlockingTask wrapper for
         // the Java fork-join framework's ManagedBlocker mechanism,
         // which adds new worker threads to the pool adaptively when
         // blocking occurs.
@@ -69,11 +68,14 @@ public class ex20 {
     }
 
     /**
-     * Run the test named {@code testName} by appying the {@code
+     * Run the test named {@code testName} by applying the {@code
      * downloadAndStoreImage} function.
      */
     private void runTest(Function<URL, File> downloadAndStoreImage,
                          String testName) {
+        // Delete any image files from the previous run.
+        FileAndNetUtils.deleteDownloadedImages(Options.instance().getDirectoryPath());
+
         // Let the system garbage collect.
         System.gc();
 
@@ -91,9 +93,6 @@ public class ex20 {
      */
     private void testDownloadBehavior(Function<URL, File> downloadAndStoreImage,
                                       String testName) {
-        // Delete any the filtered images from the previous run.
-        deleteDownloadedImages();
-
         // Get the list of files to the downloaded images.
         List<File> imageFiles = Options.instance().getUrlList()
             // Convert the URLs in the input list into a stream and
@@ -106,7 +105,7 @@ public class ex20 {
 
             // Terminate the stream and collect the results into list
             // of images.
-            .collect(Collectors.toList());
+            .toList();
 
         // Print the statistics for this test run.
         printStats(testName, imageFiles.size());
@@ -114,7 +113,7 @@ public class ex20 {
 
     /**
      * Transform URL to a File by downloading each image via its URL
-     * and storing it *without* using the Java fork-join framework's
+     * and storing it *without* using the Java common fork-join pool's
      * ManagedBlocker mechanism, i.e., the pool of worker threads will
      * not be expanded.
      */
@@ -134,13 +133,13 @@ public class ex20 {
      * pool adaptively when blocking occurs.
      */
     private File downloadAndStoreImageMB(URL url) {
-        // Create a one element array so we can update it in the
+        // Create a one-element array so we can update it in the
         // anonymous inner class instance below.
         final Image[] image = new Image[1];
 
         try {
             ForkJoinPool
-                // Submit an anonymous managedBlock implementation to
+                // Submit an anonymous managedBlocker implementation to
                 // the common ForkJoin thread pool.  This call ensures
                 // the common fork/join thread pool is expanded to
                 // handle the blocking image download.
@@ -192,7 +191,7 @@ public class ex20 {
      */
     private Image downloadImage(URL url) {
         return new Image(url,
-                         NetUtils.downloadContent(url));
+                         FileAndNetUtils.downloadContent(url));
     }
 
     /**
@@ -209,45 +208,6 @@ public class ex20 {
                                + " images using "
                                + (ForkJoinPool.commonPool().getPoolSize() + 1)
                                + " threads in the pool");
-    }
-
-    /**
-     * Clears the filter directories.
-     */
-    private void deleteDownloadedImages() {
-        int deletedFiles =
-            deleteSubFolders(Options.instance().getDirectoryPath());
-
-        if (Options.instance().diagnosticsEnabled())
-            System.out.println(TAG
-                               + ": "
-                               + deletedFiles
-                               + " previously downloaded file(s) deleted");
-    }
-
-    /**
-     * Recursively delete files in a specified directory.
-     */
-    private int deleteSubFolders(String path) {
-        int deletedFiles = 0;
-        File currentFolder = new File(path);        
-        File[] files = currentFolder.listFiles();
-
-        if (files == null) 
-            return 0;
-
-        // Java doesn't delete a directory with child files, so we
-        // need to write code that handles this recursively.
-        for (File f : files) {          
-            if (f.isDirectory()) 
-                deletedFiles += deleteSubFolders(f.toString());
-            f.delete();
-            deletedFiles++;
-        }
-
-        // Don't delete the current folder.
-        // currentFolder.delete();
-        return deletedFiles;
     }
 
     /**
