@@ -4,25 +4,22 @@ import java.util.ArrayList;
 import java.util.Iterator;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.ForkJoinPool;
 import java.util.function.Predicate;
 
 import javax.naming.directory.SearchResult;
 
+import io.reactivex.rxjava3.core.Observable;
+import io.reactivex.rxjava3.schedulers.Schedulers;
 import livelessons.utils.SearchResults;
 import livelessons.utils.StreamsUtils;
-import rx.Observable;
-import rx.Subscription;
-import rx.functions.Actions;
-import rx.observables.BlockingObservable;
-import rx.schedulers.Schedulers;
 
 import static java.util.stream.Collectors.toList;
 import static livelessons.utils.StreamsUtils.not;
 
 /**
- * Customizes the SearchStreamGang framework to use RxJava in
- * conjunction with Java Streams to search the input data for each
- * phrase in an array of phrases.
+ * Customizes the SearchStreamGang framework to use RxJava search in
+ * parallel the input data for each phrase in an array of phrases.
  */
 public class SearchWithRxJavaInputs
        extends SearchStreamGang {
@@ -37,57 +34,53 @@ public class SearchWithRxJavaInputs
     }
 
     /**
-     * Perform the processing, which uses an RxJava Stream to
-     * concurrently search for phrases in the input data.
+     * Perform the processing, which uses an RxJava Stream to search
+     * in parallel for phrases in the input data.
      */
     @Override
     protected List<List<SearchResults>> processStream() {
         return Observable
             // Converts input strings array into an Observable that
             // emits the items in the array.
-            .from(getInput())
+            .fromIterable(getInput())
 
             // Returns an Observable that emits items based on
             // applying processInput() to each item emitted by the
             // source Observable, where processInput() returns an
-            // Observable, and then merging the resulting Observables
-            // and emitting the results of this merger as a single
-            // Observable.
-            .flatMap(inputString ->
-                     Observable
-
+            // Observable, and then using flatMap() to merge the
+            // resulting Observables into a single list of lists of
+            // search results.
+            .flatMap(inputString -> Observable
                      // Returns an Observable that emits a single
                      // input string and then completes.
                      .just(inputString)
 
-                     // Returns an Observable that applies the
+                     // Return an Observable that applies the
                      // processInput() method to each item emitted by
-                     // the source Observable and emits a list of
+                     // the source Observable and uses flatMap() to
+                     // create one Observable that emits a list of
                      // SearchResults.
-                     .map(this::processInput)
+                     .flatMap(this::processInput)
 
                      // Asynchronously subscribes Observers to this
                      // Observable on the computation scheduler.
-                     .subscribeOn(Schedulers.computation()))
+                     .subscribeOn(Schedulers.from(ForkJoinPool.commonPool())))
 
-            // Returns an Observable that emits a single item: a list
+            // Returns an Observable that emits a single list
             // composed of all the items emitted by the source
             // Observable, which is itself a list of SearchResults.
             .toList()
 
             // Converts an Observable into a BlockingObservable (an
-            // Observable with blocking operators).
-            .toBlocking()
-
-            // When the blocking observable emits the single list of
-            // SearchResults item and completes, return that list.
-            .single();
+            // Observable with blocking operators) and then block
+            // until the final result is available.
+            .blockingGet();
     }
 
     /**
      * Search input string for all occurrences of the phrases to find.
      */
-    private List<SearchResults> processInput(CharSequence inputSeq) {
+    private Observable<List<SearchResults>> processInput(CharSequence inputSeq) {
         // Get the title.
         String title = getTitle(inputSeq);
 
@@ -95,27 +88,37 @@ public class SearchWithRxJavaInputs
         CharSequence input = inputSeq.subSequence(title.length(),
                                                   inputSeq.length());
 
-        return mPhrasesToFind
-            // Sequentially process each phrase.
-            .stream()
+        return Observable
+            // Converts mPhrasesToFind list into an Observable that
+            // emits the items in the list.
+            .fromIterable(mPhrasesToFind)
 
-            // Map each phrase to a stream of SearchResults for each
-            // time the phrase is found in the input.
-            .map(phrase -> 
-                 // Return a SearchResults containing a match for
-                 // each time phrase appears in the input string.
-                 searchForPhrase(phrase, 
-                                 input,
-                                 title,
-                                 false))
+            // Return an Observable that applies the searchForPhrase()
+            // method to each item emitted by the source Observable
+            // and uses flatMap() to create one Observable that emits
+            // SearchResults.
+           .flatMap(phrase -> Observable
+                    // Returns an Observable that emits a single
+                    // phrase and then completes.
+                    .just(phrase)
+
+                   // Return a SearchResults containing a match for
+                   // each time phrase appears in the input string.
+                    .map(__ -> searchForPhrase(phrase,
+                                               input,
+                                               title,
+                                               false)))
 
             // Only keep a result that has at least one match.
-            .filter(not(SearchResults::isEmpty))
-            // Filtering can also be done as
-            // .filter(result -> result.size() > 0)
+            .filter(result -> result.size() > 0)
 
-            // Create a list of SearchResults.
-            .collect(toList());
+            // Returns a Single that emits a single item, which is
+            // composed of all the items emitted by the source
+            // Observable, which is itself a list of SearchResults.
+            .toList()
+
+            // And then convert the single back to an observable.
+            .toObservable();
     }
 }
 
